--- a/imports/ui/pages/findFriend/findFriend.html
+++ b/imports/ui/pages/findFriend/findFriend.html
@@ -1,3 +1,8 @@
 <template name="findFriend">
-root
+{{#each friend in findFriends}}
+    {{friend.name}}
+    <button class="requestFriendJs">Request</button>
+    {{else}}
+    Loading
+{{/each}}
 </template>
