--- a/imports/ui/pages/friends/friends.html
+++ b/imports/ui/pages/friends/friends.html
@@ -1,3 +1,10 @@
 <template name="friends">
-root
+{{#each post in posts}}
+    {{post.title}}
+    {{post.content}}
+    {{post.imageId}}
+    {{post.author.name}}
+    {{else}}
+    Loading
+{{/each}}
 </template>
