--- a/imports/ui/pages/findFriend/findFriend.html
+++ b/imports/ui/pages/findFriend/findFriend.html
@@ -2,7 +2,8 @@
 Search by username: <input class='searchJs'>
 <input class="form-control typeahead searchJs" name="team" type="text"
        placeholder="Users by username"
-       autocomplete='true'/>
+       autocomplete="off" spellcheck="off"
+       />
 <ul>
     <!--{{#each findFriends}}-->
 
