--- a/imports/ui/pages/findFriend/findFriend.html
+++ b/imports/ui/pages/findFriend/findFriend.html
@@ -1,8 +1,9 @@
 <template name="findFriend">
-Search by username: <input class='searchJs'>
+<!--Search by username: <input class='searchJs'>-->
 <input class="form-control typeahead searchJs" name="team" type="text"
        placeholder="Users by username"
        autocomplete="off" spellcheck="off"
+       data-source="findFriends"
        />
 <ul>
     <!--{{#each findFriends}}-->
@@ -17,5 +18,18 @@ Search by username: <input class='searchJs'>
     <!--{{/each}}-->
 
 </ul>
-
+<!--        <form id="form-country_v1" name="form-country_v1">-->
+<!--    <div class="typeahead__container">-->
+<!--        <div class="typeahead__field">-->
+<!--            <div class="typeahead__query">-->
+<!--                <input class="js-typeahead-country_v1" name="country_v1[query]" placeholder="Search" autocomplete="off">-->
+<!--            </div>-->
+<!--            <div class="typeahead__button">-->
+<!--                <button type="submit">-->
+<!--                    <i class="typeahead__search-icon"></i>-->
+<!--                </button>-->
+<!--            </div>-->
+<!--        </div>-->
+<!--    </div>-->
+<!--</form>-->
 </template>
