--- a/imports/ui/pages/newDash/dashboard.html
+++ b/imports/ui/pages/newDash/dashboard.html
@@ -4,12 +4,12 @@
 <div id="nav" class="navbar">
     <button id="preview">&lt; précédent</button>
     <button id="next">suivant &gt;</button>
-
+    <button id="delete">delete</button>
     <a id="copyright" href="http://www.glicer.com">
         <small>Dev & Rock 'n' roll © Glicer</small>
     </a>
-
 </div>
+
 <ul>
     {{#each posts}}
 <li>
