--- a/imports/ui/pages/newDash/dashboard.html
+++ b/imports/ui/pages/newDash/dashboard.html
@@ -2,9 +2,10 @@
         
 <div id="gallery" class="fullscreen"></div>
 <div id="nav" class="navbar">
-    <button id="preview">&lt; précédent</button>
-    <button id="next">suivant &gt;</button>
+    <button id="preview">&lt; previous</button>
     <button id="delete">delete</button>
+    <button id="approve">approve</button>
+    <button id="next">next &gt;</button>
     <a id="copyright" href="http://www.glicer.com">
         <small>Dev & Rock 'n' roll © Glicer</small>
     </a>
