--- a/client/main.html
+++ b/client/main.html
@@ -1,5 +1,7 @@
 <body>
-    <script src="jquery.geocomplete.js"></script>
-    <script async defer src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAl1Duwvw3RESUu4paACSua-UA5Ey5fryE&libraries=places"></script>
+    <!--<script src="jquery.geocomplete.js"></script>-->
+    <head>
+        <script async defer src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAl1Duwvw3RESUu4paACSua-UA5Ey5fryE&libraries=places"></script>
+    </head>
 </body>
 
