--- a/imports/ui/pages/browseEvents/browseEvents.html
+++ b/imports/ui/pages/browseEvents/browseEvents.html
@@ -1,8 +1,13 @@
 <template name="browseEvents">
 
-<input class="mapJs">
+<input class="mapJs" placeholder="mapjs">
+
+
 
 <form id='post'>
+    <input class='picker' placeholder="Pick Start">
+    <input class='pickerEnd' placeholder="Pick End">
+    
     category: <select name="top" class='selectTopJs'>
         {{#each topCats}}
             <option value="{{this}}">{{this}}</option>
