--- a/imports/ui/pages/createEvent/createEvent.html
+++ b/imports/ui/pages/createEvent/createEvent.html
@@ -1,7 +1,17 @@
 <template name="createEvent">
+    {{> addEditEventModal }}
+<button class='publicJs'>Public</button>
+<button class='privateJs'>Private</button>
 
 <form id='post'>
-    title: <input name='title'>
+    {{#if templateType}}
+        publicJs
+    {{else}}
+        privateJs
+    {{/if}}
+    <input class='geocomplete'>
+    Title: <input name='title'>
+    Description: <input type="textarea" name="description"/>
     category: <select name="top1" class='selectTopJs1'>
         {{#each topCats}}
             <option value="{{this}}">{{this}}</option>
@@ -32,7 +42,114 @@
             <option value="{{this}}">{{this}}</option>
         {{/each}}
     </select>
-    <input type='submit'  value="submit">
+    
+    <div class='events'></div>
+
+<p>The type of event:</p>
+
+<div>
+  <input type="radio" id="constant" name="eventType" value="constant"
+         checked>
+  <label for="constant">Constant Event</label>
+</div>
+
+<div>
+  <input type="radio" id="periodical" name="eventType" value="periodical">
+  <label for="periodical">Periodical Event</label>
+</div>
+
+
+{{#if eventType}}
+    dummy data
+{{else}}
+    
+{{/if}}
+
+Child Price: <input name="childrenPrice">
+Adult Price: <input name="adultPrice">
+Adult Age: <input name="adultAge">
+Senior Price: <input name="seniorPrice">
+Senior Age: <input name="seniorAge">
+
+    {{#each currentUpload}}
+        {{#if upload}}
+    Uploading <b>{{upload.file.name}}</b>:
+    <span id="progress">{{upload.progress.get}}%</span>
+    {{else}}
+        <img src="{{link}}" alt="{{name}}" />
+        <input class='pickFrontCoverJs' {{isFrontCover}} type='checkbox'>
+        <button type="button" class='jsRemovePic'>Remove</button>
+    {{/if}}
+  {{/each}}
+        <input id="fileInput" type="file" multiple/>
+
+<input hidden name='route(street)'>
+<input hidden name='street_number'>
+<input hidden name='postal_code'>
+<input hidden name='formatted_address'>
+<input hidden name='lng'>
+<input hidden name='locations'>
+<input hidden name='bounds'>
+<input hidden name='locality'>
+<input hidden name='sublocality'>
+<input hidden name='country'>
+<input hidden name='lat'>
+<input type='submit'  value="submit">
 </form>
 
+</template>
+
+<template name="addEditEventModal">
+  <div class="modal fade" id="add-edit-event-modal" tabindex="-1" role="dialog" aria-labelledby="add-edit-event-modal">
+  <div class="modal-dialog" role="document">
+    <div class="modal-content">
+      <div class="modal-header">
+        <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
+        <h4 class="modal-title" id="add-edit-event">{{modalLabel.label}} Event</h4>
+      </div>
+      <form id="add-edit-event-form">
+        <div class="modal-body">
+          <div class="form-group">
+            <div class="row">
+              <div class="col-xs-12 col-sm-4">
+                <label for="type">Event Type</label>
+                <select name="type" class="form-control">
+                  <option selected="{{selected event.type 'Birthday' }}" value="Birthday">Birthday</option>
+                  <option selected="{{selected event.type 'Corporate' }}" value="Corporate">Corporate</option>
+                  <option selected="{{selected event.type 'Miscellaneous' }}" value="Miscellaneous">Miscellaneous</option>
+                  <option selected="{{selected event.type 'Wedding' }}" value="Wedding">Wedding</option>
+                </select>
+              </div>
+              <div class="col-xs-12 col-sm-3">
+                <label for="start">Event Starts</label>
+                <input disabled type="text" name="start" class="form-control" value="{{event.start}}">
+              </div>
+              <div class="col-xs-12 col-sm-3">
+                <label for="end">Event End</label>
+                <input disabled type="text" name="end" class="form-control" value="{{#if event.end}}{{event.end}}{{else}}{{event.start}}{{/if}}">
+              </div>
+            </div>
+          </div>
+          <div class="form-group">
+            <label for="title">Event Title</label>
+            <input type="text" name="title" class="form-control" value="{{event.title}}">
+          </div>
+          <div class="row">
+            <div class="col-xs-12 col-sm-4">
+              <label for="guests">Number of Guests</label>
+              <input type="text" name="guests" class="form-control" value="{{event.guests}}">
+            </div>
+          </div>
+        </div>
+        <div class="modal-footer">
+          {{#if modalType 'edit'}}
+            <button class="btn btn-danger pull-left delete-event">Delete Event</button>
+          {{/if}}
+          <button type="button" class="btn btn-default" data-dismiss="modal">Cancel</button>
+          <button type="submit" class="btn btn-success">{{modalLabel.button}} Event</button>
+        </div>
+      </form>
+    </div>
+  </div>
+</div>
 </template>
