--- a/imports/ui/pages/createEvent/createEvent.html
+++ b/imports/ui/pages/createEvent/createEvent.html
@@ -128,33 +128,16 @@ Senior Age: <input name="seniorAge">
         <div class="modal-body">
           <div class="form-group">
             <div class="row">
-              <div class="col-xs-12 col-sm-4">
-                <label for="type">Event Type</label>
-                <select name="type" class="form-control">
-                  <option selected="{{selected event.type 'Birthday' }}" value="Birthday">Birthday</option>
-                  <option selected="{{selected event.type 'Corporate' }}" value="Corporate">Corporate</option>
-                  <option selected="{{selected event.type 'Miscellaneous' }}" value="Miscellaneous">Miscellaneous</option>
-                  <option selected="{{selected event.type 'Wedding' }}" value="Wedding">Wedding</option>
-                </select>
-              </div>
               <div class="col-xs-12 col-sm-3">
                 <label for="start">Event Starts</label>
                 <input disabled type="text" name="start" class="form-control" value="{{event.start}}">
+                <input class='picker' name="picker" placeholder="Pick Start">
               </div>
               <div class="col-xs-12 col-sm-3">
                 <label for="end">Event End</label>
                 <input disabled type="text" name="end" class="form-control" value="{{#if event.end}}{{event.end}}{{else}}{{event.start}}{{/if}}">
+                <input class='pickerEnd' name="pickerEnd" placeholder="Pick End">
               </div>
-            </div>
-          </div>
-          <div class="form-group">
-            <label for="title">Event Title</label>
-            <input type="text" name="title" class="form-control" value="{{event.title}}">
-          </div>
-          <div class="row">
-            <div class="col-xs-12 col-sm-4">
-              <label for="guests">Number of Guests</label>
-              <input type="text" name="guests" class="form-control" value="{{event.guests}}">
             </div>
           </div>
         </div>
