--- a/imports/ui/pages/browseEvents/browseEvents.html
+++ b/imports/ui/pages/browseEvents/browseEvents.html
@@ -22,12 +22,14 @@
 
 {{#each events}}
 <div class="card" style="width: 18rem;">
-  <img src="{{frontCover}}" class="card-img-top" alt="...">
+    {{#with frontCover}}
+        {{> imageShow class="card-img-top"}}
+    {{/with}}
   <div class="card-body">
     <h5 class="card-title">{{title}}</h5>
     <h7>{{startTime}}-{{endTime}}</h7>
     <p class="card-text">{{description}}</p>
-    <a href="/buy/{{eventId}}" class="btn btn-primary">Buy ticket</a>
+    <a href="/buy/{{_id}}" class="btn btn-primary">Buy ticket</a>
   </div>
 </div>
 {{/each}}
