--- a/imports/ui/pages/createEvent/createEvent.html
+++ b/imports/ui/pages/createEvent/createEvent.html
@@ -19,16 +19,16 @@
         Anyone will be able to come.
     {{else}}
         Pick a circle of people to invite.
-        Family: <input type='checkbox' name='Family'>
-        Best Friends: <input type='checkbox' name='BF'>
-        Friends: <input type='checkbox' name='Friends'>
-        Colleagues: <input type='checkbox' name='Colleagues'>
+        Family: <input type='checkbox' name='family'>
+        Best Friends: <input type='checkbox' name='besties'>
+        Friends: <input type='checkbox' name='friends'>
+        Colleagues: <input type='checkbox' name='colleague'>
     {{/if}}
     
     Title: <input name='title'>
     Description: <input type="textarea" name="description"/>
     Location: <input class='geocomplete'>
-    
+    <div class="map_canvas"></div>
 
 <p>The type of event:</p>
 
