--- a/imports/ui/pages/upsertCategory/upsertCategory.html
+++ b/imports/ui/pages/upsertCategory/upsertCategory.html
@@ -1,4 +1,16 @@
 <template name="upsertCategory">
+    category: <select name="top" class='selectTopJs'>
+        {{#each topCats}}
+            <option value="{{this}}">{{this}}</option>
+        {{/each}}
+    </select>
+    sub: <select name="bottom" class="selectBotJs">
+        {{#each bottomCats}}
+            <option value="{{this}}">{{this}}</option>
+        {{/each}}
+    </select>
+    <input type='submit'  value="submit">
+    
 {{#with category}}
 <form id='upsertCategory'>
     top: <input name='top' value="{{top}}"> 
