--- a/imports/ui/pages/browseEvents/browseEvents.html
+++ b/imports/ui/pages/browseEvents/browseEvents.html
@@ -5,8 +5,7 @@
 
 
 <form id='post'>
-    <input class='picker' placeholder="Pick Start">
-    <input class='pickerEnd' placeholder="Pick End">
+    <input class='picker' placeholder="Pick Start" size=23>
     category: <select name="top" class='selectTopJs'>
         {{#each topCats}}
             <option value="{{this}}">{{this}}</option>
