--- a/imports/ui/pages/buyTickets/buyTickets.html
+++ b/imports/ui/pages/buyTickets/buyTickets.html
@@ -10,6 +10,10 @@
     {{/each}}
     Categories:    
     {{top1}}{{bottom1}}{{top2}}{{bottom2}}{{top3}}{{bottom3}}
+    
+    Adult Price {{adultPrice}}
+    Age under {{adultAge}}: Price {{childrenPrice}}
+    Age over {{seniorAge}}: Price {{seniorPrice}}
     <button class='buyJs'>Purchase</button>
     <button class='acceptJs'>Accept</button>
 {{/with}}
