--- a/imports/ui/pages/buyTickets/buyTickets.html
+++ b/imports/ui/pages/buyTickets/buyTickets.html
@@ -16,6 +16,7 @@
     Age over {{seniorAge}}: Price {{seniorPrice}}
     <button class='buyJs'>Purchase</button>
     <button class='acceptJs'>Accept</button>
+    <button class='testJs'>Test</button>
 {{/with}}
 {{/with}}
 </template>
