--- a/imports/ui/pages/createEvent/createEvent.html
+++ b/imports/ui/pages/createEvent/createEvent.html
@@ -112,6 +112,7 @@ Senior Age: <input name="seniorAge">
 <input hidden name='locality'>
 <input hidden name='sublocality'>
 <input hidden name='country'>
+<input hidden name='administrative_area_level_2'>
 <input hidden name='lat'>
 <input type='submit'  value="submit">
 </form>
