--- a/imports/ui/pages/dashboard/dashboard.html
+++ b/imports/ui/pages/dashboard/dashboard.html
@@ -10,6 +10,9 @@
     {{content}}
     {{imageId}}
     {{username}}
+    {{#each links}}
+        {{start}} to {{end}}, {{startTime}} to {{endTime}}
+    {{/each}}
 </li>
     {{else}}
     Loading
