--- a/imports/ui/pages/dashboard/dashboard.html
+++ b/imports/ui/pages/dashboard/dashboard.html
@@ -11,7 +11,7 @@
     {{imageId}}
     {{username}}
     {{#each links}}
-        {{start}} to {{end}}, {{startTime}} to {{endTime}}
+        <a href='/buy/{{_id}}'>{{start}} to {{end}}, {{startTime}} to {{endTime}}</a>
     {{/each}}
 </li>
     {{else}}
