--- a/imports/ui/pages/createEvent/createEvent.html
+++ b/imports/ui/pages/createEvent/createEvent.html
@@ -28,7 +28,7 @@
     Title: <input name='title'>
     Description: <input type="textarea" name="description"/>
     Location: <input class='geocomplete'>
-    <div class="map_canvas"></div>
+    <div id="map_canvas"></div>
 
 <p>The type of event:</p>
 
